<resources>
    <string name="app_name">CrowdZero</string>
    <string name="titulo_Login">Login</string>
    <string name="email_Login">Email</string>
    <string name="botao_Entrar_Inicio">Entrar</string>
    <string name="botao_Registo_Inicio">Registo</string>
    <string name="password_Login">Password</string>
    <string name="sem_registo_ou_login"><u>Sem registo, clique aqui</u></string>
    <string name="esquecer_password"><u>Esqueci-me da palavra passe</u></string>
    <string name="nome_utilizador_registo">Nome de Utilizador</string>
    <string name="nome_proprio_registo">Nome Próprio</string>
    <string name="codigo_empresa_registo">Código da Empresa</string>
    <string name="cidade">Cidade</string>
    <string name="cancelar">Cancelar</string>
    <string name="selecionar">Selecionar</string>
    <string name="confirmar">Confirmar</string>
    <string name="data_nascimento_registo">Data de Nascimento</string>
    <string name="opcoes_navbar_procurar">Procurar</string>
    <string name="opcoes_navbar_home">Home</string>
    <string name="opcoes_navbar_lista_favs">Lista de Favoritos</string>
    <string name="opcoes_navbar_notificacoes">Notificações</string>
    <string name="opcoes_navbar_instituicoes">Locais</string>
    <string name="opcoes_navbar_mapa">Mapa</string>
    <string name="opcoes_navbar_forum">Fórum</string>
    <string name="opcoes_navbar_definicoes">Definições</string>
    <string name="opcoes_navbar_classificacao">Classificações</string>

    <string name="titulo_pagina_principal">@string/opcoes_navbar_home</string>
    <string name="titulo_pagina_lista_favs">@string/opcoes_navbar_lista_favs</string>
    <string name="titulo_pagina_procurar">@string/opcoes_navbar_procurar</string>
    <string name="titulo_pagina_notificacoes">@string/opcoes_navbar_notificacoes</string>
    <string name="titulo_pagina_mapa">@string/opcoes_navbar_mapa</string>
    <string name="titulo_pagina_forum">@string/opcoes_navbar_forum</string>
    <string name="titulo_pagina_definicoes">@string/opcoes_navbar_definicoes</string>

    <string-array name="opcoes_navbar">
        <item>@string/opcoes_navbar_procurar</item>
        <item>@string/opcoes_navbar_home</item>
        <item>@string/opcoes_navbar_lista_favs</item>
        <item>@string/opcoes_navbar_notificacoes</item>
        <item>@string/opcoes_navbar_instituicoes</item>
        <item>@string/opcoes_navbar_mapa</item>
        <item>@string/opcoes_navbar_forum</item>
        <item>@string/opcoes_navbar_definicoes</item>
    </string-array>
    <!--  Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_mapa">Map</string>
    <string name="imageminstituicao">imagemInstituicao</string>
    <string name="detalhes">Detalhes</string>
    <string name="informacao_e_contactos">Informação e Contactos:</string>
    <string name="adicionar_aos_favoritos">Adicionar aos Favoritos</string>
    <string name="historico">Histórico</string>
    <string name="reports">Reportes</string>
    <string name="informacoes">Informações</string>
    <string name="opinioes">Opiniões</string>
    <string name="interior">Interior</string>
    <string name="report_com_mais_likes">Report com Mais Likes</string>
    <string name="novo_report">Novo Report</string>
    <string name="descricao">Descrição</string>
    <string name="nivel_de_densidade">Nível de densidade</string>
    <string name="submeter_novo_report">Submeter novo report</string>
    <string name="logout">Fazer logout</string>
    <string name="primeiro_nome">Primeiro Nome</string>
    <string name="ultimo_nome">Último Nome</string>
    <string name="utilizador_da_empresa">É utilizador da empresa?</string>
    <string name="instituicaoRegisto">Instituição\n<small>(Apenas insira se trabalhar para uma das empresas)</small> </string>
    <string name="instituicao">Instituição</string>
    <string name="confirmar_pertencer_inst">Confirmo que pertenço a uma instituição</string>
    <string name="codigo_postal">Código Postal</string>
    <string name="foto_de_perfil">foto de perfil</string>
    <string name="trofeu">trofeu</string>
    <string name="ranking">Ranking</string>
    <string name="likes">Likes</string>
    <string name="top_3_utilizadores">Top 3 utilizadores</string>
    <string name="medalha">medalha</string>
    <string name="fazer_report_indoor">Fazer Report Indoor</string>
    <string name="local_indoor">Local Indoor</string>
    <string name="reportes_indoor">Reportes Indoor</string>
    <string name="reportes_outdoor">Reportes Outdoor</string>
    <string name="opcoes">Opções</string>
    <string name="todos_os_reportes">Todos os Reportes</string>
    <string name="morada">Morada</string>
    <string name="imagem_logotipo_app">imagem_logotipo_app</string>
    <string name="logo_app_ipv">logo_app_ipv</string>
    <string name="classificacao">Classificação</string>
    <string name="submeter_opiniao">Submeter opinião</string>

</resources>