<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutRegistoActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearLayoutRegistoActivity"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ScrollViewRegistoActivity">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:paddingTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email_Login"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        />
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textinputlayoutemail"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="274dp"
                        android:layout_height="59dp"
                        android:layout_marginTop="9dp"
                        android:hint="@string/email_Login"
                        android:textColorHint="@color/cinzento"
                        app:boxStrokeColor="@color/verdeBotao"
                        app:hintTextColor="@color/preto">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/emailInputRegisto"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:paddingTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password_Login"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        />
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textinputlayoutpassword"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="274dp"
                        android:layout_height="59dp"
                        android:layout_marginTop="9dp"
                        android:hint="@string/password_Login"
                        android:textColorHint="@color/cinzento"
                        app:boxStrokeColor="@color/verdeBotao"
                        app:endIconMode="password_toggle"
                        app:hintTextColor="@color/preto">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/passwordInputRegisto"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:paddingTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/primeiro_nome"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        />
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textinputlayoutPrimeiroNome"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="274dp"
                        android:layout_height="59dp"
                        android:layout_marginTop="9dp"
                        android:hint="@string/primeiro_nome"
                        android:textColorHint="@color/cinzento"
                        app:boxStrokeColor="@color/verdeBotao"
                        app:hintTextColor="@color/preto">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/PrimeiroNomeInputRegisto"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:paddingTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ultimo_nome"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        />
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textinputlayoutUltimoNome"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="274dp"
                        android:layout_height="59dp"
                        android:layout_marginTop="9dp"
                        android:hint="@string/ultimo_nome"
                        android:textColorHint="@color/cinzento"
                        app:boxStrokeColor="@color/verdeBotao"
                        app:hintTextColor="@color/preto">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/UltimoNomeInputRegisto"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:paddingTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cidade"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        />
                    <Button
                        android:id="@+id/botaoCidadeRegisto"
                        style="@style/botao_input_registo"
                        android:layout_width="275dp"
                        android:layout_height="59dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/cidade"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/codigo_postal"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textinputlayoutCodigoPostal"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="274dp"
                        android:layout_height="59dp"
                        android:layout_marginTop="9dp"
                        android:hint="@string/codigo_postal"
                        android:textColorHint="@color/cinzento"
                        app:boxStrokeColor="@color/verdeBotao"
                        app:hintTextColor="@color/preto">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/CodigoPostalInputRegisto"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPostalAddress" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/morada"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textinputlayoutLocalizacao"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="274dp"
                        android:layout_height="59dp"
                        android:layout_marginTop="9dp"
                        android:hint="@string/morada"
                        android:textColorHint="@color/cinzento"
                        app:boxStrokeColor="@color/verdeBotao"
                        app:hintTextColor="@color/preto">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/LocalizacaoInputRegisto"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:paddingTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/data_nascimento_registo"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        />
                    <Button
                        android:id="@+id/botaoDataNascimentoRegisto"
                        style="@style/botao_input_registo"
                        android:layout_width="275dp"
                        android:layout_height="59dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/data_nascimento_registo"/>
                </LinearLayout>
                <LinearLayout
                    android:paddingTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    android:gravity="center"
                    tools:ignore="RtlSymmetry">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/instituicaoRegisto"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/pertenceInstCheckBoxReg"
                        android:text="@string/confirmar_pertencer_inst"/>
                    <Button
                        android:id="@+id/botaoInstituicaoRegisto"
                        style="@style/botao_input_registo"
                        android:layout_width="275dp"
                        android:layout_height="59dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/instituicao"/>
                </LinearLayout>
                <LinearLayout
                    android:paddingTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <Button
                        android:id="@+id/botaoFazerRegisto"
                        android:layout_width="270dp"
                        android:layout_height="59dp"
                        android:layout_marginTop="8dp"

                        android:text="@string/botao_Registo_Inicio" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout >

<!--<Button
                        android:id="@+id/botaoInstituicaoRegisto"
                        style="@style/botao_input_registo"
                        android:layout_width="275dp"
                        android:layout_height="59dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/instituicao"/>-->